[server] add /stats
